arm64: dtsi: Add max77826 Buck/Buck-boost for rainbow and laser
1. Add Buck/Buck-boost into laser and rainbow's regualtor supply.
2. Correct vio voltage for all IR cameras.

Bug: 116608703
Bug: 117938028
Bug: 117936575
Test: Camera basic function, flash laser and test rainbow
Change-Id: I62306bd1fa89dd98f4a24161c7adfad20947ce9b
Signed-off-by: pointerkung <pointerkung@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-floral-led-laser.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-led-laser.dtsi
@@ -21,8 +21,11 @@
 		vio-supply = <&max77826_ldo11>;
 		silego_vdd-supply = <&max77826_ldo6>;
 		sx9320_vdd-supply = <&max77826_ldo14>;
+		pmic_buck1-supply = <&max77826_buck1>;
+		pmic_buck2-supply = <&max77826_buck2>;
 		sx9320_sid = <0x28>;
-		regulator-names = "vio", "silego_vdd", "sx9320_vdd";
+		regulator-names = "vio", "silego_vdd", "sx9320_vdd",
+			"pmic_buck1", "pmic_buck2";
 		laser-type = <0>;
 		status = "ok";
 	};
@@ -35,8 +38,11 @@
 		vio-supply = <&max77826_ldo11>;
 		silego_vdd-supply = <&max77826_ldo6>;
 		sx9320_vdd-supply = <&max77826_ldo14>;
+		pmic_buck1-supply = <&max77826_buck1>;
+		pmic_buck2-supply = <&max77826_buck2>;
 		sx9320_sid = <0x28>;
-		regulator-names = "vio", "silego_vdd", "sx9320_vdd";
+		regulator-names = "vio", "silego_vdd", "sx9320_vdd",
+			"pmic_buck1", "pmic_buck2";
 		laser-type = <1>;
 		status = "ok";
 	};
