--- a/drivers/mfd/adnc/Makefile
+++ b/drivers/mfd/adnc/Makefile
@@ -5,7 +5,7 @@ obj-$(CONFIG_MFD_IAXXX)		+= iaxxx-core.o iaxxx-boot.o iaxxx-srb.o iaxxx-plugin.o
 obj-$(CONFIG_MFD_IAXXX)		+= iaxxx-regmap.o iaxxx-evnt-mgr.o
 obj-$(CONFIG_MFD_IAXXX)		+= iaxxx-dbgfs.o
 obj-$(CONFIG_MFD_IAXXX)		+= iaxxx-tunnel.o iaxxx-tunnel-dev.o
-obj-$(CONFIG_MFD_IAXXX)		+= iaxxx-debug.o iaxxx-cdev.o
+obj-$(CONFIG_MFD_IAXXX)		+= iaxxx-debug.o iaxxx-cdev.o iaxxx-debug-logging.o
 obj-$(CONFIG_MFD_IAXXX_SENSOR_TUNNEL)		+= iaxxx-sensor-tunnel.o
 obj-$(CONFIG_MFD_IAXXX_I2C)	+= iaxxx-i2c.o
 obj-$(CONFIG_MFD_IAXXX_SPI)	+= iaxxx-spi.o
