ARM: dts: msm: Increase SLPI PIL region on floral
Swap CDSP and SLPI regions to reduce impact, and increase SLPI memory
from 20 MB to 24 MB to support new Google-specific features.

Bug: 120908514
Change-Id: I39e6f9b9796b4ff63d1f7cdf0b6fec4dbca18067
Signed-off-by: Brian Duddie <bduddie@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-floral-memory.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-memory.dtsi
@@ -43,7 +43,7 @@
 	reg = <0x0 0x99000000 0x0 0x500000>;
 };
 
-&pil_slpi_mem {
+&pil_cdsp_mem {
 	reg = <0x0 0x99500000 0x0 0x1400000>;
 };
 
@@ -63,8 +63,20 @@
 	reg = <0x0 0x9AA00000 0x0 0x100000>;
 };
 
-&pil_cdsp_mem {
-	reg = <0x0 0x9AB00000 0x0 0x1400000>;
+&pil_slpi_mem {
+	reg = <0x0 0x9AB00000 0x0 0x1800000>;
+};
+
+&cont_splash_memory {
+	reg = <0x0 0x9C400000 0x0 0x02400000>;
+};
+
+&disp_rdump_memory {
+	reg = <0x0 0x9C400000 0x0 0x02400000>;
+};
+
+&qseecom_mem {
+	reg = <0 0x9E800000 0 0x1400000>;
 };
 
 // carveout for max supported resolution (1440*3040)*32bpp*5
