arm64: dts: update floral devicetree for evt
Set coral & flame msm-id for EVT1.1, and add
dts entries for proto and EVT1.0 deltas.

There's no evt vs evt1.1 dtsi for the moment
as no changes are expected.

Test: booted on flame proto 1.0
Bug: 120840256
Change-Id: I333aa4351deffab39c2648cffe2bd5f578d5dc81
Signed-off-by: Andrew Chant <achant@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-coral-proto-overlay.dts
+++ b/arch/arm64/boot/dts/google/sm8150-coral-proto-overlay.dts
@@ -11,12 +11,13 @@
  */
 
 /dts-v1/;
+/plugin/;
 
-#include "../qcom/sm8150-v2.dtsi"
-#include "sm8150-flame.dtsi"
+#include "sm8150-coral-proto.dtsi"
 
 / {
-	model = "Google Inc. MSM sm8150 Flame EVT1.1";
+	model = "Google Inc. MSM sm8150 Coral proto";
 	compatible = "google,floral-sm8150", "qcom,sm8150";
-	qcom,board-id = <0x061005 0>;
+	qcom,msm-id = <339 0x20000>;
+	qcom,board-id = <0x050105 0>;
 };
