--- a/arch/arm64/boot/dts/google/sm8150-coral-evt-overlay.dts
+++ b/arch/arm64/boot/dts/google/sm8150-coral-evt-overlay.dts
@@ -11,12 +11,13 @@
  */
 
 /dts-v1/;
+/plugin/;
 
-#include "../qcom/sm8150-v2.dtsi"
-#include "sm8150-flame.dtsi"
+#include "sm8150-coral.dtsi"
 
 / {
-	model = "Google Inc. MSM sm8150 Flame EVT1.1";
+	model = "Google Inc. MSM sm8150 Coral EVT1.0";
 	compatible = "google,floral-sm8150", "qcom,sm8150";
-	qcom,board-id = <0x061005 0>;
+	qcom,msm-id = <339 0x20000>;
+	qcom,board-id = <0x051005 0>;
 };
