--- a/arch/arm64/boot/dts/google/sm8150-coral-evt1.dts
+++ b/arch/arm64/boot/dts/google/sm8150-coral-evt1.dts
@@ -13,10 +13,10 @@
 /dts-v1/;
 
 #include "../qcom/sm8150-v2.dtsi"
-#include "sm8150-flame.dtsi"
+#include "sm8150-coral.dtsi"
 
 / {
-	model = "Google Inc. MSM sm8150 Flame EVT1.1";
+	model = "Google Inc. MSM sm8150 Coral EVT1.0";
 	compatible = "google,floral-sm8150", "qcom,sm8150";
-	qcom,board-id = <0x061005 0>;
+	qcom,board-id = <0x051005 0>;
 };
