--- a/arch/arm64/boot/dts/google/sm8150-coral-proto.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-coral-proto.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2017-2018, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2018, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -10,13 +10,5 @@
  * GNU General Public License for more details.
  */
 
-/dts-v1/;
+#include "sm8150-coral.dtsi"
 
-#include "../qcom/sm8150-v2.dtsi"
-#include "sm8150-flame.dtsi"
-
-/ {
-	model = "Google Inc. MSM sm8150 Flame EVT1.1";
-	compatible = "google,floral-sm8150", "qcom,sm8150";
-	qcom,board-id = <0x061005 0>;
-};
