arm64/dts: add persist partition into android_fstab
Bug: 119959876
Test: build pass, boot to home
Change-Id: I0dc28fb48424855ba8a8384367c270add2a710e5
Signed-off-by: YH_Lin <yhli@google.com>

--- a/arch/arm64/boot/dts/google/sdm670-b4s4-common.dtsi
+++ b/arch/arm64/boot/dts/google/sdm670-b4s4-common.dtsi
@@ -46,6 +46,15 @@
 	vendor {
 		dev = "/dev/block/platform/soc/7c4000.sdhci/by-name/vendor";
 	};
+
+	persist {
+		compatible = "android,persist";
+		dev = "/dev/block/platform/soc/7c4000.sdhci/by-name/persist";
+		mnt_point = "/mnt/vendor/persist";
+		type = "ext4";
+		mnt_flags = "nosuid,nodev,noatime,barrier=1";
+		fsmgr_flags = "wait";
+	};
 };
 
 &qupv3_se10_i2c {
