driver:display: set MDSS_FB_NUM to 3
set MDSS_FB_NUM to 3
BUG: 119382747
Change-Id: Ie1d6099cb623ecb132808b0f324aa7489f0de099
Signed-off-by: zhiyuanlin <zhiyuanlin@mobvoi.com>

--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -82,3 +82,10 @@ config FB_MSM_MDSS_FRC_DEBUG
 	frame rate control (FRC) debugging features to: Collect video frame
 	statistics and check whether its output pattern matches expected
 	cadence.
+
+config FB_MSM_TRIPLE_BUFFER
+        depends on FB_MSM_MDSS
+        bool "Enable MDSS Triple Buffer"
+        default n
+        ---help---
+        The MDSS Triple buffer make frame buffer 3 pages instead of 2 pages.
