arm64/dts tuning rt5514 soundtrigger buffer
fit ap request by decreasing buffer size
decrease 2s on music detect and 1s on hotword

Bug: 118859998
Change-Id: I806686488992afb65b0d6d3a5ae02d92c6255d2d
Signed-off-by: yixuanjiang <yixuanjiang@google.com>

--- a/arch/arm64/boot/dts/google/sdm670-b4s4-audio.dtsi
+++ b/arch/arm64/boot/dts/google/sdm670-b4s4-audio.dtsi
@@ -458,6 +458,8 @@
 		spi-max-frequency = <10000000>;
 		spi-cpol;
 		spi-cpha;
+		realtek,hotword-ignore-ms = <1000>;
+		realtek,musdet-ignore-ms = <2000>;
 	};
 };
 
