--- a/arch/arm64/configs/floral_defconfig
+++ b/arch/arm64/configs/floral_defconfig
@@ -69,6 +69,7 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_PRINT_VMEMLAYOUT=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
