arm64: dts: correct board-id for floral evt
Test: Booted on Flame proto.
Bug: 120840256
Change-Id: Ic57315e4c2d07802dc0b90cfd1bd38adbec7a70e
Signed-off-by: Andrew Chant <achant@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-coral-overlay.dts
+++ b/arch/arm64/boot/dts/google/sm8150-coral-overlay.dts
@@ -19,5 +19,5 @@
 	model = "Google Inc. MSM sm8150 Coral EVT1.1";
 	compatible = "google,floral-sm8150", "qcom,sm8150";
 	qcom,msm-id = <339 0x20000>;
-	qcom,board-id = <0x051105 0>;
+	qcom,board-id = <0x050B05 0>;
 };
