Add b4/s4 PVT device tree
Minor ID = 0x1E for PVT stage

Bug: 120887272
Change-Id: I238c8a0c1497ce3ef800319afdaaf51231b3c362
Signed-off-by: jasoncschiu <jasoncschiu@google.com>

--- a/arch/arm64/boot/dts/dtboimg-sdm670.cfg
+++ b/arch/arm64/boot/dts/dtboimg-sdm670.cfg
@@ -29,3 +29,11 @@ arch/arm64/boot/dts/google/sdm670-b4-dvt.dtbo
 arch/arm64/boot/dts/google/sdm670-s4-dvt.dtbo
         id=0x414
         rev=0x0
+
+arch/arm64/boot/dts/google/sdm670-b4-pvt.dtbo
+        id=0x31E
+        rev=0x0
+
+arch/arm64/boot/dts/google/sdm670-s4-pvt.dtbo
+        id=0x41E
+        rev=0x0
