arm: dts: floral: add thermal sensor to google battery
Battery cycle under google_battery is monitored via thermal
core as part of the sensor fusion to trigger BCL throttling under
extreme condition.

Bug: 128625129
Change-Id: I284b8594dd2dd3c8fddc28691ac52950174d45cf
Signed-off-by: George Lee <geolee@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-floral-battery.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-battery.dtsi
@@ -173,6 +173,7 @@
 		google,cv-tier-switch-cnt = <3>;
 		/* experimental */
 		google,cv-otv-margin = <0>;
+		#thermal-sensor-cells = <0>;
 	};
 
 	google_charger: google,charger {
