--- a/arch/arm64/boot/dts/google/sm8150-floral-thermal.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-thermal.dtsi
@@ -489,4 +489,41 @@
 			};
 		};
 	};
+
+	bcl-cycle {
+		polling-delay-passive = <100>;
+		polling-delay = <0>;
+		thermal-sensors = <&google_battery>;
+	};
+
+	camera_flash: camera_flash {
+		#cooling-cells = <2>;
+	};
+
+	bcl_virtual_sensor: bcl-virtual-sensor {
+	};
+
+	bcl-virt-extreme {
+		polling-delay-passive = <100>;
+		polling-delay = <0>;
+		thermal-governor = "step_wise";
+		trips {
+			active_config0: active-config0 {
+				temperature = <3>;
+				hysteresis = <0>;
+				type = "passive";
+			};
+		};
+	};
+
+};
+
+&bcl_virtual_sensor {
+
+	bcl-virt-extreme {
+		num_sensors = <3>;
+		coefficients = <(-3000) 400 (-10000)>;
+		sensor-names = "pm8150b-vbat-lvl0", "bcl-cycle", "battery";
+	};
+
 };
