arm: dts: floral: Cooling mechanism for camera flash
Registered camera flash cooling device for thermal engine/BCL
throttling (Device tree configuration)

Bug: 128625129
Signed-off-by: George Lee <geolee@google.com>
Change-Id: I855ebca251145ff878b010c1d263f9fed4dda750

--- a/arch/arm64/boot/dts/google/sm8150-coral-camera-sensor.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-coral-camera-sensor.dtsi
@@ -254,6 +254,7 @@
 		torch-source = <&pm8150l_torch0 &pm8150l_torch1>;
 		switch-source = <&pm8150l_switch2>;
 		status = "ok";
+		thermal-mitigation = <1500 1000 750 500>;
 	};
 
 	led_flash_rear_aux: qcom,camera-flash@1 {
@@ -264,6 +265,7 @@
 		torch-source = <&pm8150l_torch0 &pm8150l_torch1>;
 		switch-source = <&pm8150l_switch2>;
 		status = "ok";
+		thermal-mitigation = <1500 1000 750 500>;
 	};
 };
 
