--- a/arch/arm64/boot/dts/google/sm8150-flame-camera-sensor.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-flame-camera-sensor.dtsi
@@ -253,6 +253,7 @@
 		torch-source = <&pm8150l_torch0 &pm8150l_torch1>;
 		switch-source = <&pm8150l_switch2>;
 		status = "ok";
+		thermal-mitigation = <1500 1000 750 500>;
 	};
 
 	led_flash_rear_aux: qcom,camera-flash@1 {
@@ -263,6 +264,7 @@
 		torch-source = <&pm8150l_torch0 &pm8150l_torch1>;
 		switch-source = <&pm8150l_switch2>;
 		status = "ok";
+		thermal-mitigation = <1500 1000 750 500>;
 	};
 };
 
