arm64: dts: move flame pac193x to QUP7 on EVT1.1+
Move Flame's pac193x to QUP7 on EVT1.1+.

Change-Id: Ia8eb7db5f732c66e245ed517f2e8f95b355f63fd
Signed-off-by: Thierry Strudel <tstrudel@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-flame-evt.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-flame-evt.dtsi
@@ -13,4 +13,5 @@
 #include "sm8150-flame-common.dtsi"
 #include "sm8150-flame-camera-sensor-evt.dtsi"
 #include "sm8150-flame-battery-evt.dtsi"
+#include "sm8150-flame-pac193x-evt.dtsi"
 #include "sm8150-floral-qup-evt.dtsi"
