--- a/arch/arm64/boot/dts/google/sm8150-flame-pac193x-evt.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-flame-pac193x-evt.dtsi
@@ -9,6 +9,8 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  */
-#include "sm8150-flame-common.dtsi"
-#include "sm8150-flame-battery.dtsi"
-#include "sm8150-flame-pac193x.dtsi"
+
+&qupv3_se0_i2c {
+	flame_pac: pac193x@10 {};
+};
+#include "sm8150-flame-pac193x-common.dtsi"
