--- a/arch/arm64/boot/dts/google/sm8150-flame-pac193x.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-flame-pac193x.dtsi
@@ -10,41 +10,7 @@
  * GNU General Public License for more details.
  */
 
-&qupv3_se0_i2c {
-	status = "ok";
-	// see -qup.dtsi for clk-freq-out setting
-	pac193x@10 {
-		compatible = "microchip,pac1934";
-		reg = <0x10>;
-		samp-rate = <8>;
-		status = "okay";
-
-		// pm8150_l17 is always on in AOP
-		// avdd-supply = <&pm8150_l17>;
-		// pac193x,regulator_avdd = "avdd";
-
-		ch5: channel@0 {
-		     uohms-shunt-res = <10000>;
-		     rail-name = "PPVAR_VPH_PWR_OLED";
-		     subsys-name = "display";
-		     channel_enabled;
-		};
-
-		ch6: channel@1 {
-		     uohms-shunt-res = <10000>;
-		     rail-name = "PPVAR_VPH_PWR_ABH";
-		     subsys-name = "airbrush";
-		     channel_enabled;
-		};
-
-		ch7: channel@2 {
-		     uohms-shunt-res = <100000>;
-		     rail-name = "NC";
-		};
-
-		ch8: channel@3 {
-		     uohms-shunt-res = <10000>;
-		     rail-name = "NC";
-		};
-	};
+&qupv3_se7_i2c {
+	flame_pac: pac193x@10 {};
 };
+#include "sm8150-flame-pac193x-common.dtsi"
