arm64: dts: move the pac193x to qupv3_se7_i2c for C2/EVT1.1
Bug: 129280640
Change-Id: Ied5874c5c2b7746be673a1c64a1f9d3ea7636776
Signed-off-by: YiHsiang Peng <yihsiangpeng@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-coral-evt.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-coral-evt.dtsi
@@ -13,5 +13,6 @@
 #include "sm8150-coral-camera-sensor-evt.dtsi"
 #include "sm8150-coral-battery-evt.dtsi"
 #include "sm8150-coral-display-evt.dtsi"
+#include "sm8150-coral-pac193x-evt.dtsi"
 #include "sm8150-floral-qup-evt.dtsi"
 
