arm64/configs: b4s4: Expand USB HID game controller support
Enable support for USB-connected xplay, ps3, and other generic USB
controllers.

Cherrypick from Id3bfcd8a2b98041af732c41b1a3ede490845fb4e

Bug: 129367726
Change-Id: I744f0876368653abe3162bc1e5101b58905b866e
Signed-off-by: Albert Wang <albertccwang@google.com>

--- a/arch/arm64/configs/bonito_defconfig
+++ b/arch/arm64/configs/bonito_defconfig
@@ -317,6 +317,9 @@ CONFIG_INPUT_KEYDEBUG=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
+CONFIG_JOYSTICK_XPAD=y
+CONFIG_JOYSTICK_XPAD_FF=y
+CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v27=m
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v27=m
@@ -418,13 +421,20 @@ CONFIG_SND_USB_AUDIO_QMI=y
 CONFIG_SND_SOC=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
+CONFIG_HID_DRAGONRISE=y
 CONFIG_HID_ELECOM=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MULTITOUCH=y
+CONFIG_HID_PANTHERLORD=y
+CONFIG_PANTHERLORD_FF=y
 CONFIG_HID_PLANTRONICS=y
 CONFIG_HID_SONY=y
-CONFIG_USB=y
+CONFIG_SONY_FF=y
+CONFIG_HID_GREENASIA=y
+CONFIG_GREENASIA_FF=y
+CONFIG_HID_WIIMOTE=y
+CONFIG_USB_HIDDEV=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC3=y
