--- a/arch/arm64/boot/dts/google/sm8150-floral-audio.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-audio.dtsi
@@ -150,11 +150,21 @@
 		qcom,msm-cpudai-tdm-clk-rate = <12288000>;
 		qcom,msm-cpudai-tdm-sync-mode = <0>;
 		qcom,msm-cpudai-tdm-invert-sync = <0>;
+		qcom,msm-cpudai-tdm-group-num-ports = <2>;
+		qcom,msm-cpudai-tdm-group-port-id = <36896 36898>;
+
 		pinctrl-names = "default", "sleep";
 		pinctrl-0 = <&tert_mi2s_active &tert_mi2s_sd0_active
 				&tert_mi2s_sd1_active>;
 		pinctrl-1 = <&tert_mi2s_sleep &tert_mi2s_sd0_sleep
 				&tert_mi2s_sd1_sleep>;
+
+		dai_tert_tdm_rx_1: qcom,msm-dai-q6-tdm-tert-rx-1 {
+			compatible = "qcom,msm-dai-q6-tdm";
+			qcom,msm-cpudai-tdm-dev-id = <36898>;
+			qcom,msm-cpudai-tdm-data-align = <0>;
+		};
+
 	};
 
 	qcom,msm-dai-tdm-tert-tx {
@@ -335,6 +345,7 @@
 				<&dai_pri_tdm_rx_0>, <&dai_pri_tdm_tx_0>,
 				<&dai_sec_tdm_rx_0>, <&dai_sec_tdm_tx_0>,
 				<&dai_tert_tdm_rx_0>, <&dai_tert_tdm_tx_0>,
+				<&dai_tert_tdm_rx_1>,
 				<&dai_quat_tdm_rx_0>, <&dai_quat_tdm_tx_0>,
 				<&dai_quin_tdm_rx_0>, <&dai_quin_tdm_tx_0>;
 		asoc-cpu-names = "msm-dai-q6-hdmi.8",  "msm-dai-q6-dp.24608",
@@ -365,6 +376,7 @@
 				"msm-dai-q6-tdm.36864", "msm-dai-q6-tdm.36865",
 				"msm-dai-q6-tdm.36880", "msm-dai-q6-tdm.36881",
 				"msm-dai-q6-tdm.36896", "msm-dai-q6-tdm.36897",
+				"msm-dai-q6-tdm.36898",
 				"msm-dai-q6-tdm.36912", "msm-dai-q6-tdm.36913",
 				"msm-dai-q6-tdm.36928", "msm-dai-q6-tdm.36929";
 
