Orbital: Remove custom modifications from kernel common folder.
Bug: 130262399
Change-Id: I6e84831985415ab6d4990e478c8e411928cc8885
Signed-off-by: sunzhiquan <sunzhiquan@longcheer.com>

--- a/arch/arm64/boot/dts/qcom/msm8909-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8909-mtp.dtsi
@@ -116,11 +116,11 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&gpio_key_active>;
 
-		stem1 {
-			label = "stem1";
+		camera_focus {
+			label = "camera_focus";
 			gpios = <&msm_gpio 91 0x1>;
 			linux,input-type = <1>;
-			linux,code = <750>;
+			linux,code = <0x210>;
 			debounce-interval = <15>;
 			linux,can-disable;
 			gpio-key,wakeup;
@@ -136,11 +136,11 @@
 			gpio-key,wakeup;
 		};
 
-		stem2 {
-			label = "stem2";
+		vol_up {
+			label = "volume_up";
 			gpios = <&msm_gpio 90 0x1>;
 			linux,input-type = <1>;
-			linux,code = <751>;
+			linux,code = <115>;
 			debounce-interval = <15>;
 			linux,can-disable;
 			gpio-key,wakeup;
