--- a/arch/arm64/boot/dts/qcom/8909w-pm660.dtsi
+++ b/arch/arm64/boot/dts/qcom/8909w-pm660.dtsi
@@ -77,10 +77,6 @@
 		/delete-property/ cdc-vdd-pa-supply;
 		/delete-property/ cdc-vdd-mic-bias-supply;
 	};
-
-	dsi_pm660_panel_pwr_supply {
-		/delete-node/ qcom,panel-supply-entry@2;
-	};
 };
 
 &msm_gpio {
@@ -200,13 +196,9 @@
 	vddio-supply = <&pm660_l12>; /*1.8V*/
 	qcom,mdss_dsi_ctrl0@1ac8000 {
 		bklt-supply = <&bob_vreg>;
-		vdd-supply = <&bob_vreg>; /*1.8*/
+		vdd-supply = <&pm660_l18>; /*1.8*/
 		vddio-supply = <&pm660_l11>;
 	};
-};
-
-&mdss_dsi {
-		/delete-property/ bklt-supply;
 };
 
 &mdss_dsi0_pll {
@@ -386,11 +378,8 @@
 		qcom,fg-esr-timer-asleep = <224 256>;
 		qcom,fg-esr-timer-charging = <0 96>;
 		qcom,cycle-counter-en;
-		qcom,fg-chg-term-current = <20>;
 		qcom,hold-soc-while-full;
 		qcom,fg-auto-recharge-soc;
-		qcom,fg-jeita-thresholds = <0 15 45 50>;
-		qcom,battery-thermal-coefficients = [d2 50 ff];
 		qcom,fg-recharge-soc-thr = <98>;
 		status = "okay";
 
@@ -545,7 +534,7 @@
 	qcom,pbs-client = <&pm660_pbs>;
 };
 
-/{
+/ {
 	/delete-node/ qcom,battery-data;
 	mtp_batterydata: qcom,battery-data {
 		qcom,batt-id-range-pct = <15>;
