--- a/arch/arm64/boot/dts/qcom/sdw3100-apq8009w-wtp.dts
+++ b/arch/arm64/boot/dts/qcom/sdw3100-apq8009w-wtp.dts
@@ -25,7 +25,7 @@
 	compatible = "qcom,apq8009-mtp", "qcom,apq8009", "qcom,mtp";
 	qcom,msm-id =   <265 0>,
 			<301 0>;
-	qcom,board-id = <8 0x10f>, <8 0x0f>;
+	qcom,board-id = <8 0x10f>;
 	qcom,pmic-id =  <0x0001001b 0x0 0x0 0x0>,
 			<0x0001011b 0x0 0x0 0x0>;
 };
@@ -200,90 +200,6 @@
 	};
 };
 
-&i2c_5 {
-		status = "okay";
-		raydium@39 {
-		compatible = "raydium,raydium-ts";
-		reg = <0x39>;
-		interrupt-parent = <&msm_gpio>;
-		interrupts = <98 0x2>;
-		vdd-supply = <&pm660_l18>;
-		vcc-i2c-supply = <&pm660_l13>;
-		raydium,name = "raydium_ts";
-		raydium,irq-gpio = <&msm_gpio 98 0x02>;/**/
-		raydium,reset-gpio = <&msm_gpio 16 0x00>;/**/
-		raydium,display-coords = <0 0 480 480>;/**/
-		raydium,hard-reset-delay-ms = <500>;
-		raydium,soft-reset-delay-ms = <200>;
-		raydium,num-max-touches = <2>;
-
-		pinctrl-names = "pmx_ts_active",
-				"pmx_ts_suspend",
-				"pmx_ts_release";
-		pinctrl-0 = <&ts_int_active &ts_reset_active>;
-		pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
-		pinctrl-2 = <&ts_release>;
-		};
-//		/delete-node/ it7260@46;
-		/delete-node/ synaptics@20;
-};
-
-&pm660_haptics {
-	qcom,actuator-type = "lra";
-	qcom,vmax-mv = <2680>;
-	qcom,ilim-ma = <100>;
-	qcom,play-rate-us = <6250>;
-	qcom,lra-auto-resonance-mode = "qwd";
-	qcom,lra-resonance-sig-shape = "sine";
-	qcom,lra-allow-variable-play-rate;
-	wf_0 {
-		/* CLICK */
-		qcom,effect-id = <0>;
-		qcom,wf-vmax-mv = <2680>;
-		qcom,wf-pattern = [7e 7e 7e 7e];
-		qcom,wf-brake-pattern = [02 01 01 01];
-		qcom,wf-play-rate-us = <6250>;
-	};
-	wf_1 {
-		/* DOUBLE CLICK */
-		qcom,effect-id = <1>;
-		qcom,wf-vmax-mv = <2680>;
-		qcom,wf-pattern = [7e 7e 7e 02 02 02 02 02];
-		qcom,wf-repeat-count = <1>;
-		qcom,wf-s-repeat-count = <2>;
-		qcom,wf-play-rate-us = <6250>;
-	};
-	wf_2 {
-		/* TICK */
-		qcom,effect-id = <2>;
-		qcom,wf-vmax-mv = <2680>;
-		qcom,wf-pattern = [7e 7e];
-		qcom,wf-brake-pattern = [02 01 01 01];
-		qcom,wf-play-rate-us = <6250>;
-	};
-	wf_3 {
-		/* THUD */
-		qcom,effect-id = <3>;
-		qcom,wf-vmax-mv = <2680>;
-		qcom,wf-pattern = [7e 7e 7e];
-		qcom,wf-play-rate-us = <6250>;
-	};
-	wf_4 {
-		/* POP */
-		qcom,effect-id = <4>;
-		qcom,wf-vmax-mv = <2680>;
-		qcom,wf-pattern = [7e 7e];
-		qcom,wf-play-rate-us = <6250>;
-	};
-	wf_5 {
-		/* HEAVY CLICK */
-		qcom,effect-id = <5>;
-		qcom,wf-vmax-mv = <2680>;
-		qcom,wf-pattern = [7e 7e 7e];
-		qcom,wf-play-rate-us = <6250>;
-	};
-};
-
 &spi_0 {
 	status = "disabled";
 };
@@ -342,7 +258,6 @@
 &bg_cdc {
 	status = "ok";
 	vdd-spkr-supply = <&pm660_l11>;
-	/delete-property/ qcom,bg-speaker-connected;
 };
 
 &blsp1_uart1 {
@@ -417,15 +332,8 @@
 	};
 };
 
-&dsi_boe_rm6d010_454p_cmd {
-    qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
-	qcom,panel-supply-entries = <&dsi_pm660_panel_pwr_supply>;
-};
-
-
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&dsi_boe_rm6d010_454p_cmd>;
-	//qcom,dsi-pref-prim-pan = <&dsi_auo_390p_cmd>;
-	//qcom,platform-bklight-en-gpio = <&msm_gpio 52 0>;
+	qcom,dsi-pref-prim-pan = <&dsi_auo_390p_cmd>;
+	qcom,platform-bklight-en-gpio = <&msm_gpio 52 0>;
 	qcom,platform-enable-gpio = <&msm_gpio 59 0>;
 };
