arm64: dtsi: audio: set quat_tdm to non-group for downlink audio
Following commit will open quat_tdm_rx to group

commit a911be0174e8 ("ARM: dts: msm: enable cpu dai and group tdm")

Test: Test feature works
bug: 120055055
Change-Id: I9b05f7249ed776868dac125d2a711dec8d703ff0
Signed-off-by: yixuanjiang <yixuanjiang@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-floral-audio.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-audio.dtsi
@@ -203,6 +203,8 @@
 	};
 
 	qcom,msm-dai-tdm-quat-rx {
+		qcom,msm-cpudai-tdm-group-num-ports = <1>;
+		qcom,msm-cpudai-tdm-group-port-id = <36912>;
 		qcom,msm-cpudai-tdm-clk-rate = <12288000>;
 		qcom,msm-cpudai-tdm-sync-mode = <0>;
 		qcom,msm-cpudai-tdm-invert-sync = <0>;
