arm64/dts: floral: add ese on qup8
Enable ese spi driver on qup8.

Bug: 127318846
Change-Id: Iedfbc01f5ef457c21e74f8a60497e5f52f0cc786
Signed-off-by: Andrew Chant <achant@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-floral-common.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-common.dtsi
@@ -21,6 +21,7 @@
 #include "sm8150-floral-camera-pmic.dtsi"
 #include "sm8150-floral-citadel.dtsi"
 #include "sm8150-floral-display.dtsi"
+#include "sm8150-floral-ese.dtsi"
 #include "sm8150-floral-haptics.dtsi"
 #include "sm8150-floral-memory.dtsi"
 #include "sm8150-floral-nfc.dtsi"
