arm64/dts: floral: Reduce throttling on CPU6 and CPU7 for low soc
CPU6 and CPU7 were throttled to its maximum under low soc condition.
Reset to state 10 for CPU6 and CPU7 for low soc condition.

Bug: 130643361
Change-Id: Iba2ef9a5c9136da199c225f84d1c3ef4e7bbd9e7
Signed-off-by: George Lee <geolee@google.com>

--- a/arch/arm64/boot/dts/google/sm8150-floral-thermal.dtsi
+++ b/arch/arm64/boot/dts/google/sm8150-floral-thermal.dtsi
@@ -334,6 +334,16 @@
 				cooling-device =
 					<&CPU5 10 10>;
 			};
+			soc_cpu6 {
+				trip = <&soc_trip>;
+				cooling-device =
+					<&CPU6 10 10>;
+			};
+			soc_cpu7 {
+				trip = <&soc_trip>;
+				cooling-device =
+					<&CPU7 10 10>;
+			};
 		};
 	};
 
