--- a/arch/arm/configs/triggerfish-perf_defconfig
+++ b/arch/arm/configs/triggerfish-perf_defconfig
@@ -460,6 +460,7 @@ CONFIG_SCHEDSTATS=y
 CONFIG_IPC_LOGGING=y
 CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
+CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
