--- a/arch/arm64/boot/dts/google/sm7150-sunfish-memory.dtsi
+++ b/arch/arm64/boot/dts/google/sm7150-sunfish-memory.dtsi
@@ -66,6 +66,12 @@
 		reg = <0 0xA501F000 0 0x1000>;
 	};
 
+	ramdumplog_mem: ramdumplog_region@0xA5020000 {
+		compatible = "removed-dma-pool";
+		no-map;
+		reg = <0 0XA5020000 0 0x10000>;
+	};
+
 	kregistry_mem: kregistry_mem@b8000000 {
 		compatible = "removed-dma-pool";
 		no-map;
