touch: add touch driver and fw for U120BLX01 incell LCM
1.Touch driver for Raydium WT030 display driver IC
2.Touch firmware for 1.2" hyper circle LCM with version 2.C.1.0

Bug: 156878204

Signed-off-by: james_hsiao <james_hsiao@compal.com>
Change-Id: I450a7ef9982ced95c17a2416412726b014f782d9

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1069,6 +1069,19 @@ config TOUCHSCREEN_RM_INCELL
     To compile this driver as a module, choose M here: the
     module will be called raydium_incell.
 
+config TOUCHSCREEN_RM_TS_U120BLX01
+	depends on I2C
+	depends on GPIOLIB || COMPILE_TEST
+	tristate "Raydium I2C Touchscreen U120BLX01"
+	help
+	  Say Y here if you have Raydium series I2C touchscreen,
+	  such as U120BLX01, connected to your system.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called raydium_u120blx01.
+
 config TOUCHSCREEN_RM_TS
 	tristate "Raydium I2C Touchscreen"
 	depends on I2C
