arm64/sunfish_defconfig: Enable hang recover kernel features
Bug: 146066270
Change-Id: Id63e163ef4800158bf0614054f5b8baa198df929
Signed-off-by: Woody Lin <woodylin@google.com>

--- a/arch/arm64/configs/sunfish_defconfig
+++ b/arch/arm64/configs/sunfish_defconfig
@@ -702,10 +702,13 @@ CONFIG_DEBUG_INFO=y
 CONFIG_FRAME_WARN=3072
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_SOFTLOCKUP_DETECTOR=y
+CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
 # CONFIG_DEBUG_PREEMPT is not set
+CONFIG_RCU_PANIC_ON_STALL=1
 CONFIG_IPC_LOGGING=y
 CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
